<resources>
    <string name="app_name">Carpool NBU</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_driver_registration">Driver Registration Activity</string>
    <string name="title_activity_passenger_registration">Passenger Registration Activity</string>
    <string name="name_label">Name:</string>
    <string name="license_id_label">License ID:</string>
    <string name="save_label">Save</string>
    <string name="phone_label">Phone:</string>
    <string name="car_brand_label">Brand:</string>
    <string name="car_model_label">Model:</string>
    <string name="car_color_label">Color:</string>
    <string name="notes_label">Notes:</string>
    <string-array name="car_brands">
        <item>-</item>
        <item>Acura</item>
        <item>Aixam</item>
        <item>Alfa Romeo</item>
        <item>Alpina</item>
        <item>Aro</item>
        <item>Asia Motors</item>
        <item>Aston Martin</item>
        <item>Audi</item>
        <item>Bentley</item>
        <item>BMW</item>
        <item>Bugatti</item>
        <item>Buick</item>
        <item>Cadillac</item>
        <item>Chevrolet</item>
        <item>Chrysler</item>
        <item>Citroen</item>
        <item>Corvette</item>
        <item>Dacia</item>
        <item>Daewoo</item>
        <item>DAF</item>
        <item>Daihatsu</item>
        <item>Datsun</item>
        <item>Dodge</item>
        <item>Ferrari</item>
        <item>Fiat</item>
        <item>Ford</item>
        <item>GAZ</item>
        <item>Geo</item>
        <item>GMC</item>
        <item>Great wall</item>
        <item>Honda</item>
        <item>Hummer</item>
        <item>Hyundai</item>
        <item>Ikarus</item>
        <item>Infiniti</item>
        <item>Isuzu</item>
        <item>Iveco</item>
        <item>Jaguar</item>
        <item>Jeep</item>
        <item>Kia</item>
        <item>Lada</item>
        <item>Lamborghini</item>
        <item>Lancia</item>
        <item>Land Rover</item>
        <item>Landwind</item>
        <item>LDV</item>
        <item>Lexus</item>
        <item>Lincoln</item>
        <item>Lotus</item>
        <item>Maserati</item>
        <item>Maybach</item>
        <item>Mazda</item>
        <item>Mercedes-Benz</item>
        <item>MG</item>
        <item>Mini</item>
        <item>Mitsubishi</item>
        <item>Morgan</item>
        <item>Moskvich</item>
        <item>Nissan</item>
        <item>Oldsmobile</item>
        <item>Opel</item>
        <item>Peugeot</item>
        <item>Piaggio</item>
        <item>Plymouth</item>
        <item>Pontiac</item>
        <item>Porsche</item>
        <item>Range Rover</item>
        <item>Renault</item>
        <item>Rolls Royce</item>
        <item>Rover</item>
        <item>Saab</item>
        <item>Samand</item>
        <item>Santana</item>
        <item>Scion</item>
        <item>Seat</item>
        <item>Setra</item>
        <item>Shuanghuan</item>
        <item>Skoda</item>
        <item>Smart</item>
        <item>Ssangyong</item>
        <item>Subaru</item>
        <item>Suzuki</item>
        <item>Talbot</item>
        <item>Tata</item>
        <item>Tempo</item>
        <item>Temsa</item>
        <item>Toyota</item>
        <item>Trabant</item>
        <item>UAZ</item>
        <item>Varshava</item>
        <item>VAZ</item>
        <item>Volga</item>
        <item>Volvo</item>
        <item>Vromos</item>
        <item>VW</item>
        <item>Wartburg</item>
        <item>Wiesmann</item>
        <item>Zastava</item>
        <item>Zaz</item>
    </string-array>
    <string name="passort_id_label">Passort ID:</string>
    <string name="register_driver_item">Register Driver</string>
    <string name="register_passenger_item">Register Passenger</string>
    <string name="post_trip_item">Post Trip</string>
    <string name="search_trip_item">Search Trip</string>
    <string name="exit_item">Exit</string>
</resources>